--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,3 @@
-
 ja:
   views:
     pagination:
@@ -7,3 +6,9 @@ ja:
       previous: <i class="fas fa-angle-left"></i>
       next: <i class="fas fa-angle-right"></i>
       truncate: "..."
+      
+ja:
+  activerecord:
+  errors:
+    messages:
+      record_invalid: "バリデーションに失敗しました: %{errors}"
